--- a/doc/schwarzschild.tex
+++ b/doc/schwarzschild.tex
@@ -186,7 +186,11 @@ The bosonic sector of \eqref{eq:superline} admits four Killing vectors (time tra
 \end{proposition}
 
 \begin{proof}
-The Schwarzschild metric has Killing vectors $\partial_{t}, \partial_{\phi}, \sin\phi \partial_{\theta} + \cot\theta \cos\phi \partial_{\phi}, \cos\phi \partial_{\theta} - \cot\theta \sin\phi \partial_{\phi}$. The flat fermionic metric $\eta_{ab}$ admits no non-trivial Killing supervectors since $\theta^{a}$ transformations are constant.
+The Schwarzschild metric has Killing vectors $\partial_{t}$,
+$\partial_{\phi}$, $\sin\phi \partial_{\theta} + \cot\theta \cos\phi \partial_{\phi}$,
+$\cos\phi \partial_{\theta} - \cot\theta \sin\phi \partial_{\phi}$.
+The flat fermionic metric $\eta_{ab}$ admits no non-trivial Killing
+supervectors since $\theta^{a}$ transformations are constant.
 \end{proof}
 
 \subsection{Conclusion}
