--- a/doc/schwarzschild.tex
+++ b/doc/schwarzschild.tex
@@ -32,6 +32,9 @@
 This article explores the Schwarzschild metric within the framework of supergeometry, extending the classical solution of general relativity to a supersymmetric context. We define the metric on a $(4|2)$-dimensional supermanifold and derive its superline element using the supervielbein formalism. Key mathematical properties are established through theorems, including supersymmetric invariance and curvature properties. We employ algebraic tools such as Lie superalgebras, superdifferential forms, and BRST cohomology to study the geometry, and discuss integration techniques like the Berezin integral for fermionic coordinates.
 \end{abstract}
 
+\tableofcontents
+
+
 \section{The Schwarzschild Metric in Supergeometry}
 
 The Schwarzschild metric describes the spacetime geometry around a non-rotating, spherically symmetric mass in general relativity. Supergeometry, the mathematical foundation of supersymmetric theories like supergravity, extends spacetime to a supermanifold with bosonic and fermionic coordinates. This article formalizes the Schwarzschild metric in supergeometry, derives its properties, and applies algebraic tools to analyze its structure. We focus on theorems, derivations, integration, and BRST cohomology, providing a rigorous mathematical framework.
