--- a/doc/fred.tex
+++ b/doc/fred.tex
@@ -21,7 +21,9 @@
 This article explores the mathematical foundations of topological quantum programming, focusing on the role of twisted complex K-theory (\(\mathrm{KU}^\tau_G(X)\)) and the space of self-adjoint, odd-graded Fredholm operators (\(\text{Fred}^0_C\)) as presented in the framework of Twisted Equivariant Differential K-theory (TED-K). We provide a detailed explanation of the type-theoretic definition of \(\mathrm{KU}^\tau_G(X)\) in cohesive homotopy type theory, its categorical interpretation, and its significance in encoding anyonic quantum states. Additionally, we analyze the properties of \(\text{Fred}^0_C\), its connection to \(L^2\) spaces, and its role in K-theory via index theory and integration. The article is motivated by the TED-K framework for hardware-aware quantum programming, as developed by Sati and Schreiber.
 \end{abstract}
 
-\section{Introduction}
+\tableofcontents
+
+\section{Twisted K-Theory and Fredholm Operators}
 
 Topological quantum computations (TQC) leverages topological
 properties of quantum materials to achieve fault-tolerant
@@ -36,8 +38,6 @@ Fredholm operators \(\text{Fred}^0_C\), which encode quantum
 states and their braiding operations.
 
 This article synthesizes detailed explanations of \(\mathrm{KU}^\tau_G(X)\) and \(\text{Fred}^0_C\), drawing from the TED-K framework. We elucidate their definitions in cohesive homotopy type theory (HoTT), their categorical interpretations in \(\infty\)-topoi, and their physical significance in TQC. The exposition is aimed at readers with a background in algebraic topology, functional analysis, or quantum computing, seeking to understand the mathematical underpinnings of topological quantum programming.
-
-\section{Twisted K-Theory: \(\mathrm{KU}^\tau_G(X)\)}
 
 \subsection{Definition in Cohesive HoTT}
 
@@ -60,6 +60,59 @@ Here, \(X\) is a type representing a topological space or orbifold (e.g., the co
     \item \textbf{\(\int_{\mathrm{BPU}}\)}: The shape modality, extracting the homotopy type, combined with the dependent product over \(\mathrm{BPU}\), computing all sections compatible with \(\tau\).
     \item \textbf{\(|\cdot|_0\)}: The 0-truncation, yielding a set (the K-theory group \(\mathrm{KU}^0(X, \tau)\)).
 \end{itemize}
+
+\subsection{\(\mathrm{PU}\): Projective Unitary Group}
+\label{subsec:pu}
+
+The projective unitary group \(\mathrm{PU}\) is defined as the quotient:
+
+\begin{equation}
+\mathrm{PU} = \mathrm{U}(\mathscr{H}) / \mathrm{U}(1)
+\end{equation}
+
+where \(\mathrm{U}(\mathscr{H})\) is the group of unitary operators on a separable complex Hilbert space \(\mathscr{H}\) (e.g., \(L^2(\mathbb{R}^n; \mathbb{C})\)), equipped with the strong operator topology, and \(\mathrm{U}(1) \cong S^1\) is the circle group acting by scalar multiplication. An element \(u \in \mathrm{U}(\mathscr{H})\) is unitary if \(u^* u = u u^* = I\), preserving the inner product, and \(\mathrm{PU}\) identifies unitaries differing by a phase \(e^{i\theta} \in \mathrm{U}(1)\).
+
+The topological structure of \(\mathrm{PU}\) is significant for K-theory, as it has non-trivial homotopy groups, notably:
+
+\begin{equation}
+\pi_3(\mathrm{PU}) \cong \mathbb{Z}
+\end{equation}
+
+This makes \(\mathrm{PU}\) suitable for classifying twists in twisted K-theory, as twists are often associated with elements in the third cohomology group \(H^3(X; \mathbb{Z})\). In the TED-K framework, \(\mathrm{PU}\) acts on \(\text{Fred}_C^0\) by conjugation:
+
+\begin{equation}
+T \mapsto u T u^{-1}, \quad u \in \mathrm{PU}, T \in \text{Fred}_C^0
+\end{equation}
+
+This action preserves the self-adjointness, odd-graded property, and Fredholm nature of the operators, enabling the encoding of the twist \(\tau\). Physically, the \(\mathrm{PU}\)-action reflects symmetries in the quantum system, such as those arising from gauge fields or anyonic statistics in topological quantum materials.
+
+In the categorical setting of the cohesive \(\infty\)-topos of smooth \(\infty\)-groupoids, \(\mathrm{PU}\) is a group object (a 0-type with a group structure). Its role is to mediate the twisting of K-theory classes, ensuring that the quantum states encoded by \(\text{Fred}_C^0\) respect the topological phase specified by \(\tau\).
+
+\subsection{\(\mathrm{BPU}\): Classifying Space of \(\mathrm{PU}\)}
+\label{subsec:bpu}
+
+The classifying space \(\mathrm{BPU}\) is the delooping of \(\mathrm{PU}\), a 1-type in the \(\infty\)-topos characterized by:
+
+\begin{equation}
+\pi_1(\mathrm{BPU}) \cong \mathrm{PU}, \quad \pi_i(\mathrm{BPU}) = 0 \text{ for } i \neq 1
+\end{equation}
+
+However, since \(\mathrm{PU}\) itself has higher homotopy groups, \(\mathrm{BPU}\) inherits non-trivial homotopy in higher degrees:
+
+\begin{equation}
+\pi_4(\mathrm{BPU}) \cong \pi_3(\mathrm{PU}) \cong \mathbb{Z}
+\end{equation}
+
+Maps \(\tau: X \to \mathrm{BPU}\) classify principal \(\mathrm{PU}\)-bundles or gerbes over \(X\), corresponding to elements in \(H^1(X; \mathrm{PU})\), which are related to \(H^3(X; \mathbb{Z})\) via the long exact sequence of the fibration:
+
+\begin{equation}
+\mathrm{U}(1) \to \mathrm{U}(\mathscr{H}) \to \mathrm{PU}
+\end{equation}
+
+In the TED-K framework, \(\tau: X \to \mathrm{BPU}\) encodes a topological obstruction, such as a gauge field or a gerbe, that affects the braiding statistics of anyons. The classifying space \(\mathrm{BPU}\) serves as the base for the twist, and the homotopy fiber \(\text{Fred}_C^0 \beta \mathrm{PU}\) ensures that the Fredholm operators are compatible with the \(\mathrm{PU}\)-bundle defined by \(\tau\).
+
+Categorically, \(\mathrm{BPU}\) is a pointed 1-type in the cohesive \(\infty\)-topos, and the map \(\tau\) is a morphism in \(\mathcal{H}\). The dependent product \(\iint_{\mathrm{BPU}}\) in the definition of \(\mathrm{KU}^\tau(X)\) integrates over all possible twists, ensuring that the K-theory classes reflect the topological structure imposed by \(\tau\). Physically, \(\mathrm{BPU}\) mediates the connection between the topological phase of the quantum material and the quantum states encoded in \(\text{Fred}_C^0\).
+
 
 \subsection{Categorical Interpretation}
 
