--- a/doc/rigpa.tex
+++ b/doc/rigpa.tex
@@ -22,6 +22,8 @@
 This metatheory formalizes Dzogchen and Abhidharma within supergeometrical M-theory in a cohesive topos, using Symmetric Monoidal Categories (SMC) and Cartesian Closed Categories (CCC). It models the Basis of All (\textit{kun gzhi}), Rigpa as Computational Awareness, Trikaya, mindstreams, karma, invocation prayers, and enlightenment, embedding and deriving advanced mathematical structures (derived categories, abelian categories, Grothendieck’s yogas, stable homotopy theory, chromatic homotopy theory, homotopy spheres, K-theories, spectral categories, categories of spectra, T-spectra, categories of diagrams). The framework provides a type-theoretic foundation for a computational model, unifying quantum, logical, and geometric perspectives with Dzogchen’s non-dual philosophy.
 \end{abstract}
 
+\tableofcontents
+
 \section{Introduction}
 % Overview and goals
 Dzogchen, the "Great Perfection," posits a non-dual primordial awareness (Rigpa) underlying all phenomena, with the Basis of All (\textit{kun gzhi}) as the source of samsaric and enlightened states. This metatheory formalizes these concepts within supergeometrical M-theory, using a cohesive topos \(\mathbf{SmthSet}\) extended with supergeometry. The framework employs:
