--- a/doc/fred.tex
+++ b/doc/fred.tex
@@ -10,7 +10,7 @@
 \newtheorem{remark}{Remark}[section]
 
 \title{Twisted K-Theory and Fredholm Operators}
-\author{}
+\author{Maksym Sokhatskyi}
 \date{May 10, 2025}
 
 \begin{document}
